# emulator_arm

./: CMakeLists.txt  README.md  commit_msg.txt  cpu.c  cpu.h  decode.c  decode.h  main.c  memory.c  memory.h
cpu/: cpu.c  cpu.h
cpu/labels_table/: labels_table.c  labels_table.h
cpu/program_table/: program_table.c  program_table.h
cpu/registers_table/: registers_table.c  registers_table.h
decode/: decode.c  decode.h
decode/b/: buildInstructionB.h
decode/buildersDecode/: buildersDecode.h
decode/buildersDecode/b/: buildInstructionB.c  buildInstructionB.h
decode/buildersDecode/decodeBranch/: buildInstructionB.c  buildInstructionB.h
decode/buildersDecode/decodeDPI/: buildInstructionDPI.c  buildInstructionDPI.h
decode/buildersDecode/decodeDPR/: buildInstructionDPR.c  buildInstructionDPR.h
decode/buildersDecode/decodeMemory/: buildInstructionM.c  buildInstructionM.h
decode/buildersDecode/dpi/: buildInstructionDPI.c  buildInstructionDPI.h
decode/buildersDecode/dpr/: buildInstructionDPR.c  buildInstructionDPR.h
decode/buildersDecode/m/: buildInstructionM.c  buildInstructionM.h
decode/dpi/: BuildInstructionDPI.c  BuildInstructionDPI.h  buildInstructionDPI.h
decode/dpr/: BuildInstructionDPR.h  buildInstructionDPR.h
decode/m/: buildInstructionM.h
encode/: encode.c  encode.h
encode/builders/: builders.c  builders.h
encode/builders/builderB/b_Branch/: builderB.c  builderB.h
encode/builders/builderDPI/dpi_Access/: builderDPI_ASS.h
encode/builders/builderDPI/dpi_Arithmetic/: builderDPI_A.c  builderDPI_A.h
encode/builders/builderDPI/dpi_Logic/: builderDPI_L.c  builderDPI_L.h
encode/builders/builderDPI/dpi_Move/: builderDPI_MOV.c  builderDPI_MOV.h
encode/builders/builderDPI/dpi_Shift/: builderDPI_Shift.c  builderDPI_Shift.h
encode/builders/builderDPR/dpi_Shift/: builderDPR_Shift.c  builderDPR_Shift.h
encode/builders/builderDPR/dpr_Arithmetic/: builderDPR_A.c  builderDPR_A.h
encode/builders/builderDPR/dpr_Logic/: builderDPR_L.c  builderDPR_L.h
encode/builders/builderM/m_Access/: builderM.c  builderM.h
encode/builders/dpi_a/: builderDPI_A.h
encode/buildersEncode/: buildersEncode.c  buildersEncode.h
encode/buildersEncode/encodeBranch/: builderB.c  builderB.h
encode/buildersEncode/encodeDPI/dpi_Arithmetic/: builderDPI_A.c  builderDPI_A.h
encode/buildersEncode/encodeDPI/dpi_Logic/: builderDPI_L.c  builderDPI_L.h
encode/buildersEncode/encodeDPI/dpi_Move/: builderDPI_MOV.c  builderDPI_MOV.h
encode/buildersEncode/encodeDPI/dpi_Shift/: builderDPI_Shift.c
encode/buildersEncode/encodeDPR/dpr_Arithmetic/: builderDPR_A.c  builderDPR_A.h
encode/buildersEncode/encodeDPR/dpr_Logic/: builderDPR_L.c  builderDPR_L.h
encode/buildersEncode/encodeDPR/dpr_Shift/: builderDPR_Shift.c  builderDPR_Shift.h
encode/buildersEncode/encodeMemory/: builderM.c  builderM.h
encode/opcode_table/: opcode_table.c  opcode_table.h
encode/registers_table/: registers_table.c
execute/: execute.c  execute.h
execute/alu/: alu.c  alu.h
execute/executes/executeB/: executeB.c  executeB.h
execute/executes/executeDPI/: executeDPI.c  executeDPI.h
execute/executes/executeDPR/: executeDPR.c  executeDPR.h
execute/executes/executeM/: executeM.c  executeM.h
memory/: memory.c  memory.h
reader/: reader.c  reader.h
tests/: print_utils.c  print_utils.h  test_cpu.c  test_decode.c  test_exit_encode.c  test_main.c
tests/test_decode/test_decode_B/: test_decode_B.c
tests/test_decode/test_decode_DPI/: test_decode_dpi.c  test_decode_dpi_a.c
tests/test_decode/test_decode_DPR/: test_decode_dpr.c
tests/test_decode/test_decode_M/: test_decode_m.c
tests/test_encode/: test_encode_b.c  test_encode_dpi_a.c  test_encode_dpi_l.c  test_encode_dpi_mov.c  test_encode_dpi_shift.c
tests/test_encode/test_encode_DPI/: test_encode_b.c  test_encode_dpi_a.c  test_encode_dpi_l.c  test_encode_dpi_mov.c  test_encode_dpi_shift.c
tests/test_encode/test_encode_DPR/: test_encode_dpr_a.c  test_encode_dpr_logic.c  test_encode_dpr_shift.c
tests/test_encode/test_encode_M/: test_encode_m.c
